examples/test/testpolicy10186.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10186
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key48: value41
      key47: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value22
          key0: value3
          key38: value25
      podSelector:
        matchLabels:
          key10: value38
          key6: value16
          key33: value30
